--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./build && NODE_ENV=production webpack",
-    "run": "rm -rf ./build && NODE_ENV=production webpack && go run main.go",
+    "run": "rm -rf ./build && NODE_ENV=production webpack && go run main.go --config=serial-config.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
